# py-xdg-sni-client

./: pyproject.toml
py_xdg_sni_client/: sni.py
tests/: test_py_xdg_sni_client.py
