[tool.poetry]
name = "py-xdg-sni-client"
version = "0.1.0"
description = "XDG StatusNotifierItem Client implementation"
authors = ["Mubashshir <ahmubashshir@gmail.com>"]
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.5"
pydbus = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
